--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   "dependencies": {
     "fork-stream": "^0.0.4",
     "linerstream": "^0.1.4",
-    "phantomjs-prebuilt": "^2.1.3",
+    "phantomjs-prebuilt": "~2.1.3",
     "temp": "^0.8.0"
   },
   "devDependencies": {
