--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
   "dependencies": {
     "fork-stream": "^0.0.4",
     "linerstream": "^0.1.4",
+    "net-cluster": "0.0.2",
     "phantomjs-prebuilt": "^2.1.3",
-    "temp": "^0.8.0"
+    "temp": "^0.8.0",
+    "ws": "^1.1.1"
   },
   "devDependencies": {
     "chai": "^3.2.0",
